--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: #E2E6EA;
+    background-color: #F4F3F3;
 }
 
 h3{
@@ -25,10 +25,16 @@ nav div, nav div ul{
 
 nav{
      background-color: #F4F3F3;
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     z-index: 99;
 }
 
 section{
     height: 100vh;
+    padding-top: 45px;
 }
 
 .navbar{
